--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "olc_api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
     "b": "^2.0.1",
     "body-parser": "^1.18.3",
     "csv": "^3.1.0",
+    "express": "^4.16.3",
     "multer": "^1.3.0"
   },
   "author": "",
